fix(ui): improve vertical alignment of icons with text in the overflow menu (#7314)
- Add `vertical-align: baseline` to the svg class.
- Improves the vertical alignment of the icons that contain text in the overflow menu, and possibly in other places.
Co-committed-by: Simon Ochsenreither <simon@ochsenreither.de>

--- a/web_src/css/base.css
+++ b/web_src/css/base.css
@@ -382,6 +382,7 @@ a.label,
 }
 
 .ui.menu .item > .svg {
+  align-self: baseline;
   margin-right: 0.35em;
 }
 
